# qrc-thresher

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: alpha_lite.yaml
data/: LICENSE-DATA
docs/: BUILD_SPEC.md  DECISIONS.md  LICENSE-DOCS  MASTER_AUGMENTATION_PLAN_2026.md  METHODOLOGY.md  REFERENCES.md
docs/sphinx/: conf.py  index.rst  modules.rst
results/gates/: G1.json  G2.5.json
src/qrc_thresher/: __init__.py  cli.py  config.py  db.py  engine.py  observability.py
src/qrc_thresher/baselines/: __init__.py  esn.py  gru.py  random_features.py
src/qrc_thresher/commands/: __init__.py  ablation.py  gate.py  health.py  noise.py  perf.py  plot.py  plugins.py  run.py  summary.py
src/qrc_thresher/metrics/: __init__.py  perf.py  runtime.py  scoring.py  stats.py
src/qrc_thresher/plugins/: __init__.py  builtin.py  protocols.py  registry.py
src/qrc_thresher/proof/: __init__.py  benchmark_health.py  run_manifest.py  source_health.py
src/qrc_thresher/reservoirs/: __init__.py  ablations.py  noise_models.py  pennylane_qrc.py  qiskit_crosscheck.py  stateful_qrc.py
src/qrc_thresher/tasks/: __init__.py  narma10.py  stm.py  temporal_parity.py
src/qrc_thresher/viz/: __init__.py  plots.py
tests/: conftest.py  test_gates.py  test_metrics.py  test_noise_models.py  test_perf.py  test_plugins.py  test_proof_layer.py  test_reproducibility.py  test_smoke_qrc.py  test_stateful_qrc.py  test_tasks.py
