[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrc_thresher"
version = "0.1.0"
description = "Falsification-first benchmark harness for quantum reservoir computing vs classical baselines"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "pennylane>=0.44,<0.45",
    "pennylane-lightning",
    "qiskit[all]>=2.3,<3",
    "qiskit-aer",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "pyyaml",
    "pytest>=8.0",
    "ruff>=0.4",
    "reservoirpy>=0.3.11",
    "click>=8.1",
]

[project.scripts]
qrc-thresher = "qrc_thresher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
